# LilyGo-Display-IDF

main/: CMakeLists.txt  lv_conf.h  main.cpp
main/fonts/: fa_symbol_40.c  industry_120.c  industry_30.c  industry_40.c  industry_50.c  industry_60.c  industry_90.c  industry_black_100.c  industry_black_80.c
